[project]
name = "sootopolis"
version = "0.1.0"
description = "A python package which creates waterfall charts for explaining linear regression predictions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair >= 5.5.0",
    "polars >= 1.29.0",
    "narwhals >= 1.40.0"
]

[tool.mypy]
mypy_path = "sootopolis"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true